fix(style): longer titles overflowing

--- a/erpnext/public/scss/hierarchy_chart.scss
+++ b/erpnext/public/scss/hierarchy_chart.scss
@@ -40,6 +40,10 @@
 	line-height: 1.35;
 }
 
+.node-info {
+	width: 12.7rem;
+}
+
 .node-connections {
 	font-size: 0.75rem;
 	line-height: 1.35;
